fixed snmpd password again

--- a/snmpd.conf
+++ b/snmpd.conf
@@ -58,7 +58,7 @@
 # from):
 
 #       sec.name  source          community
-com2sec paranoid  209.25.134.4/32  f5422c7146fccda597ebbfa0dd
+com2sec paranoid  209.25.134.4/32  PAROLA
 #com2sec readonly  default         public
 #com2sec readwrite default         private
 
