--- a/snmpd.conf
+++ b/snmpd.conf
@@ -1,4 +1,5 @@
-com2sec paranoid  209.25.134.4/32  13e0adb96dd43c755349ca8d1c
+com2sec paranoid  209.25.134.4/32	PAROLA
+com2sec paranoid  50.31.74.8/32		PAROLA
 group MyROSystem v1        paranoid
 group MyROSystem v2c       paranoid
 group MyROSystem usm       paranoid
