--- a/snmpd.conf
+++ b/snmpd.conf
@@ -16,7 +16,7 @@ access MyROSystem ""     any       noauth    exact  system none   none
 access MyROGroup ""      any       noauth    exact  all    none   none
 access MyRWGroup ""      any       noauth    exact  all    all    none
 syslocation DATACENTER
-syscontact notify@amln.net
+syscontact zlobber@gmail.com
 disk / 10000
 includeAllDisks 10%
 load 12 14 14
